--- a/chired.cabal
+++ b/chired.cabal
@@ -62,6 +62,7 @@ executable chired
                        aeson >= 0.8,
                        scotty >= 0.9.0,
                        scotty-tls >= 0.3,
+                       scotty-cookie >= 0.1.0.3,
                        containers >= 0.5.5,
                        text >= 1.2.0.3,
                        parsec >= 3.1.7,
